revive + pause game at 0

--- a/SquirrelDefender.html
+++ b/SquirrelDefender.html
@@ -143,6 +143,8 @@
         //  Our controls.
         cursors = game.input.keyboard.createCursorKeys();
         fireButton = game.input.keyboard.addKey(Phaser.Keyboard.SPACEBAR);
+
+        //game.input.onDown.add(deathToggle, this);
     }
     function update() {
         //  Collide the player and the stars with the platforms
@@ -166,13 +168,22 @@
         }
         //  Reset the players velocity (movement)
         player.body.velocity.x = 0;
+
         if (isDead) {
             player.animations.play('dead');
+            if (!lives == 0) {
+                player.revive();
+                isDead = false;
+            }
+            else {
+                game.pause();
+            }
         } else if (isDying) {
             player.animations.play('dying');
             player.animations.currentAnim.onComplete.add(function () {
                 isDead = true;
-                isDying = false;}, this);
+                isDying = false;
+            }, this);
         } else if (cursors.left.isDown) {
             //  Move to the left
             player.body.velocity.x = -300;
@@ -284,13 +295,11 @@
         scoreText.text = 'Score: ' + score;
     }
     function playerCollisionHandler(player,cyclist){
-        lives -=1;
-        livesText.text = 'Lives: ' + lives;
-        cyclist.kill();
-        isDying = true;
+            lives -= 1;
+            livesText.text = 'Lives: ' + lives;
+            cyclist.kill();
+            isDying = true;
     }
-
 </script>
-
 </body>
 </html>
