--- a/SquirrelDefender.html
+++ b/SquirrelDefender.html
@@ -13,7 +13,7 @@
 <body>
 
 <script type="text/javascript">
-    var game = new Phaser.Game(1300,700, Phaser.CANVAS, '', { preload: preload, create: create, update: update });
+    var game = new Phaser.Game(1300,700, Phaser.CANVAS, '', { preload: preload, create: create, update: update});
     function preload() {
         game.load.image('bullet', 'assets/star.png');
         game.load.image('background', 'assets/background.png');
@@ -141,13 +141,16 @@
         cyclists.physicsBodyType = Phaser.Physics.ARCADE;
         cyclists.setAll('outOfBoundsKill', true);
         cyclists.setAll('checkWorldBounds', true);
+
         createCyclists();
+
         //  Our controls.
         cursors = game.input.keyboard.createCursorKeys();
         fireButton = game.input.keyboard.addKey(Phaser.Keyboard.SPACEBAR);
 
         //game.input.onDown.add(deathToggle, this);
     }
+
     function update() {
         //  Collide the player and the acorns with the platforms
         game.physics.arcade.collide(player, platforms, ledgeShake, null, this);
@@ -171,7 +174,7 @@
         //  Reset the players velocity (movement)
         player.body.velocity.x = 0;
 
-        if (isDead) {
+        if (isDead){
             player.animations.play('dead');
             if (!lives == 0) {
                 player.revive();
@@ -189,6 +192,7 @@
         } else if (cursors.left.isDown) {
             //  Move to the left
             player.body.velocity.x = -300;
+            followPlayer();
             if (cursors.up.isDown && player.body.touching.down) {
                 //  Allow the player to jump if they are touching the ground.
                 player.body.velocity.y = -800;
@@ -202,6 +206,7 @@
         } else if (cursors.right.isDown) {
             //  Move to the right
             player.body.velocity.x = 300;
+            followPlayer();
             if (cursors.up.isDown && player.body.touching.down) {
                 //  Allow the player to jump if they are touching the ground.
                 player.body.velocity.y = -800;
@@ -238,7 +243,9 @@
         }
         game.physics.arcade.overlap(cyclists, bullets, collisionHandler, null, this);
         game.physics.arcade.overlap(player, cyclists, playerCollisionHandler, null, this);
+
     }
+
     function collectAcorn (player, acorn) {
         // Removes the acorn from the screen
         acorn.kill();
@@ -263,16 +270,40 @@
             }
         }
     }
+
     function createCyclists() {
-        for (var i = 0; i <10; i++){
+        for (var i = 0; i <3; i++){
             var cyclist = game.add.sprite(game.world.randomX, game.world.height - 90, 'bicycle');
             cyclist.scale.setTo(2, 2);
             cyclists.add(cyclist);
         }
-        game.add.tween(cyclists).to({x:cyclists.x-5},2000, Phaser.Easing.Default, true, 0, 100, true);
+        game.add.tween(cyclists).to({x:cyclists.x-2},2000, Phaser.Easing.Default, true, 0, 100, true);
         cyclists.callAll('animations.add','animations','left', [0, 1], 10, true);
         cyclists.callAll('animations.play', 'animations', 'left');
     }
+
+    function followPlayer() {
+
+        //cyclists.forEach(function(enemy) {
+        cyclist = cyclists.getFirstAlive();
+
+            if (cursors.left.isDown) {
+                cyclist.body.velocity.x = 200;
+
+                cyclists.callAll('animations.add','animations','right', [2, 3], 10, true);
+                cyclists.callAll('animations.play', 'animations', 'right');
+            }
+            else{
+                cyclist.body.velocity.x = -200;
+                cyclists.callAll('animations.add', 'animations', 'left', [0, 1], 10, true);
+                cyclists.callAll('animations.play', 'animations', 'left');
+
+            }
+        cyclist = cyclists.getFirstDead();
+
+        //});
+    }
+
     function ledgeShake(player, ledge) {
         if (! isShaken) {
             isShaken = true;
