Added random acorns, game over screen, restart option, music

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Line Game</title>
-    <script type="text/javascript" src="js/phaser.min.js"></script>
-    <style type="text/css">
-        body {
-            margin: 0;
-        }
-    </style>
+    <script type="text/javascript" src="lib/js/phaser.min.js"></script>
+    <script type="text/javascript" src="lib/js/boot.js"></script>
+    <script typ
+
 </head>
 <body>
 
